# flow-template

./: PROJECT_SETUP.md  requirements.txt
example_flow/: README.md  crewai_flow.html  pyproject.toml  {topic}_keyword_research.md
example_flow/None/: daily_journaling_conference_agenda.txt
example_flow/db/: chroma.sqlite3
example_flow/outputs/keyword_research/: competitive_landscape.md  conference_agenda.md  for_dummies.md  keywords.md  reddit.md
example_flow/src/example_flow/: main.py  old_main.py  types.py
example_flow/src/example_flow/crews/content_strategy_crew/: content_strategy_crew.py
example_flow/src/example_flow/crews/content_strategy_crew/config/: agents.yaml  tasks.yaml
example_flow/src/example_flow/crews/keyword_crew/: keyword_crew.py
example_flow/src/example_flow/crews/keyword_crew/config/: agents.yaml  tasks.yaml
example_flow/src/example_flow/crews/poem_crew/: poem_crew.py
example_flow/src/example_flow/crews/poem_crew/config/: agents.yaml  tasks.yaml
example_flow/src/example_flow/crews/post_creation_crew/: post_creation_crew.py
example_flow/src/example_flow/crews/post_creation_crew/agents/: content_approval_expert.py
example_flow/src/example_flow/crews/post_creation_crew/config/: agents.yaml  tasks.yaml
example_flow/src/example_flow/tools/: filename_generator.py  unsplash.py
